--- a/membros/templates/membro.html
+++ b/membros/templates/membro.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <p>{{ membro.username}}</p>
+<p>{{ membro.area_de_atuacao}}</p>
+
 <p><a href="{% url 'excluir_membro' membro.pk %}">Excluir</a></p>
 
 </body>
