com home funcionando com blog

--- a/membros/templates/membro.html
+++ b/membros/templates/membro.html
@@ -7,6 +7,7 @@
 <body>
 <p>{{ membro.username}}</p>
 <p>{{ membro.area_de_atuacao}}</p>
+<p>{{ membro.join_up}}</p>
 
 <p><a href="{% url 'excluir_membro' membro.pk %}">Excluir</a></p>
 
