--- a/noticias/templates/noticia.html
+++ b/noticias/templates/noticia.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Taura Bots</title>
+    <title>membro</title>
 </head>
 <body>
+<p>{{ noticia.titulo}}</p>
+<p>{{ noticia.texto}}</p>
 
-<p><a href="{% url 'membros' %}">Membros</a></p>
 </body>
 </html>
