--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -20,14 +20,22 @@
 
 <body>
 
+<div >
+    <img src="/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
+</div>
+
+
 <div class = "row" style = "margin-top: 200px">
     <div class="container">
+
         <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
         <div class="col-md-6"><button onclick = 'window.location.href = "/membros"' class="btn btn-lg btn-primary">Membros </button></div>
     </div>
 </div>
 
  <script src="js/bootstrap.min.js"></script>
+
+
 
 </body>
 </html>
