adicionei as bibliotecas locais do bootstrap

--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -37,11 +37,13 @@
 <body>
 
 
+{# logo #}
 <div class="row" style = "margin-top: 200px">
     <img src="/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
 </div>
 
 
+{# botões #}
 <div class = "row" style = "margin-top: 200px">
     <div class="container">
        <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
@@ -49,7 +51,11 @@
     </div>
 </div>
 
-<script src="js/bootstrap.min.js"></script>
+
+
+
+
+
 
 
 
