adicionei as bibliotecas locais do bootstrap

--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -39,7 +39,7 @@
 
 {# logo #}
 <div class="row" style = "margin-top: 200px">
-    <img src="/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
+    <img src="/membros/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
 </div>
 
 
