adicionei as bibliotecas locais do bootstrap

--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -36,12 +36,10 @@
 
 <body>
 
-
 {# logo #}
 <div class="row" style = "margin-top: 200px">
-    <img src="/membros/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
+    <img src="membros/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
 </div>
-
 
 {# botões #}
 <div class = "row" style = "margin-top: 200px">
