--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -44,8 +44,10 @@
 {# botões #}
 <div class = "row" style = "margin-top: 200px">
     <div class="container">
-       <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
        <div class="col-md-6"><button onclick = 'window.location.href = "/membros"' class="btn btn-lg btn-primary">Membros </button></div>
+        <div class="col-md-6"><button onclick = 'window.location.href = "/projetos"' class="btn btn-lg btn-primary">Projetos </button></div>
+        <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
+
     </div>
 </div>
 
