--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,7 @@
 <html lang="pt-br">
 <head>
 
-
-       {################################### COPIAR PARA TODO O HTML ################################################}
+    {################################### COPIAR PARA TODO O HTML ################################################}
     {#referência:#}
     {#http://webdevacademy.com.br/tutoriais/bootstrap-3-como-comecar/#}
 
@@ -33,21 +32,34 @@
     {# ########################################################################################################## #}
 
 
-
 </head>
 
 <body>
+
+{# logo #}
 <div class="row" style = "margin-top: 200px">
     <img src="membros/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
 </div>
 
-
+{# botões #}
 <div class = "row" style = "margin-top: 200px">
     <div class="container">
+       <div class="col-md-6"><button onclick = 'window.location.href = "/membros"' class="btn btn-lg btn-primary">Membros </button></div>
+        <div class="col-md-6"><button onclick = 'window.location.href = "/projetos"' class="btn btn-lg btn-primary">Projetos </button></div>
         <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
-        <div class="col-md-6"><button onclick = 'window.location.href = "/membros"' class="btn btn-lg btn-primary">Membros </button></div>
+
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
