adicionei as bibliotecas locais do bootstrap

--- a/templates/noticias.html
+++ b/templates/noticias.html
@@ -3,6 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Noticias</title>
+
+        {################################### COPIAR PARA TODO O HTML ################################################}
+    {#referência:#}
+    {#http://webdevacademy.com.br/tutoriais/bootstrap-3-como-comecar/#}
+
+    {# PRÉ CONFIGURAÇÕES #}
+    {# meta-tags #}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {# Esta tag força o IE a usar as definições de CSS mais recentes, e evita #}
+    {#que ele quebre o visual quando estiver no Modo de Compatibilidade. #}
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {#A metatag de viewport faz o site ocupar todo o espaço disponível na janela, #}
+    {#tanto em celulares, como em tablets ou em PC’s.#}
+
+    <meta charset="UTF-8">  {# Esta tag indica ao browser que a página vair usar caracteres Unicode, para exibir letras com acentos e cedilha, por exemplo.#}
+
+    {# BIBLIOTECA #}
+    {# referências ao bootstrap #}
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <script src="static/js/jquery.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    {# E essas são as referências ao jQuery e aos plug-ins do Bootstrap. #}
+    {#O jQuery deve sempre vir antes do Js do Bootstrap, porque o Bootstrap depende dele. #}
+    {# ########################################################################################################## #}
+
+
 </head>
 <body>
 
