--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
 {# logo #}
 <div class="row" style = "margin-top: 200px">
-    <img src="membros/static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
+    <img src="static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
 </div>
 
 {# botões #}
@@ -47,6 +47,7 @@
        <div class="col-md-6"><button onclick = 'window.location.href = "/membros"' class="btn btn-lg btn-primary">Membros </button></div>
         <div class="col-md-6"><button onclick = 'window.location.href = "/projetos"' class="btn btn-lg btn-primary">Projetos </button></div>
         <div class="col-md-6"><button onclick = 'window.location.href ="/noticias"' class="btn btn-lg btn-primary">Noticias</button></div>
+
 
     </div>
 </div>
