adicionei novo layout nos botões do home

--- a/templates/criar-noticia.html
+++ b/templates/criar-noticia.html
@@ -31,13 +31,16 @@
     {# ########################################################################################################## #}
 
 
-
-
 </head>
 <body>
+
+<p style="font-size: 24px">ADICIONANDO NOTíCIA</p>
 <form action="" method="post">{% csrf_token %}
+
     {{ form.as_p }}
-    <input type="submit" value="Salvar" />
+
+    <button type="submit" style="margin-top: 15px">SALVAR</button>
+
 </form>
 
 </body>
