--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
+
 <head>
+    <title>home</title>
 
     {################################### COPIAR PARA TODO O HTML ################################################}
     {#referência:#}
@@ -32,35 +34,36 @@
     {# ########################################################################################################## #}
 
 
+
 </head>
 
 <body>
 
-{# logo #}
-<div class="row" style = "margin-top: 200px">
-    <img src="static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 200px;height: 200px">
+
+
+<div>
+    <h1><a href="https://www.facebook.com/Taurabots/?fref=ts" class="btn btn-lg btn-primary">facebook</a></span></h1>
+
 </div>
 
-{# botões #}
-<div class = "row" style = "margin-top: 200px">
-    <div class="container">
-       <div class="col-md-6"><button onclick = 'window.location.href = "/membros/"' class="btn btn-lg btn-primary">Membros </button></div>
-       <div class="col-md-6"><button onclick = 'window.location.href = "/projetos/"' class="btn btn-lg btn-primary">Projetos </button></div>
-       <div class="col-md-6"><button onclick = 'window.location.href ="/noticias/"' class="btn btn-lg btn-primary">Noticias</button></div>
-    </div>
+<div class="row" style = "margin-top: 100px">
+    <img src="static/logo.jpg" class="img-circle ; img-responsive center-block" style="width: 300px;height: 300px">
 </div>
 
+<div class="btn-group" style="margin-top: 150px">
 
+    <button onclick = 'window.location.href = "/membros/"' class="btn btn-lg btn-primary" style = "margin-left:600px ">Membros </button>
+    <button onclick = 'window.location.href = "/projetos/"' class="btn btn-lg btn-primary" >Projetos </button>
+    <button onclick = 'window.location.href ="/noticias/"' class="btn btn-lg btn-primary">Noticias</button>
 
-
-
-
-
-
-
-
-
+</div>
 
 
 </body>
 </html>
+
+
+
+
+
+
