--- a/templates/noticia.html
+++ b/templates/noticia.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>membro</title>
+    <title>noticia</title>
 
         {################################### COPIAR PARA TODO O HTML ################################################}
     {#referência:#}
@@ -33,6 +33,7 @@
 
 </head>
 <body>
+
 <p>{{ noticia.titulo}}</p>
 <p>{{ noticia.texto}}</p>
 
