--- a/templates/inclur-projeto.html
+++ b/templates/inclur-projeto.html
@@ -38,6 +38,8 @@
     {{ form.as_p }}
     <input type="submit" value="Salvar" />
 </form>
+    <button onclick = 'window.location.href ="/"' class="btn btn-lg btn-primary">HOME</button>
+
 
 </body>
 </html>
