--- a/templates/membros.html
+++ b/templates/membros.html
@@ -4,40 +4,91 @@
     <meta charset="UTF-8">
     <title>Membros</title>
 
-        {################################### COPIAR PARA TODO O HTML ################################################}
-    {#referência:#}
-    {#http://webdevacademy.com.br/tutoriais/bootstrap-3-como-comecar/#}
 
-    {# PRÉ CONFIGURAÇÕES #}
-    {# meta-tags #}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {# Esta tag força o IE a usar as definições de CSS mais recentes, e evita #}
-    {#que ele quebre o visual quando estiver no Modo de Compatibilidade. #}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {#A metatag de viewport faz o site ocupar todo o espaço disponível na janela, #}
-    {#tanto em celulares, como em tablets ou em PC’s.#}
+<!-- adicionando bibliotecas de estilo-->
+    {% load staticfiles %}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
-    <meta charset="UTF-8">  {# Esta tag indica ao browser que a página vair usar caracteres Unicode, para exibir letras com acentos e cedilha, por exemplo.#}
-
-    {# BIBLIOTECA #}
-    {# referências ao bootstrap #}
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    {# E essas são as referências ao jQuery e aos plug-ins do Bootstrap. #}
-    {#O jQuery deve sempre vir antes do Js do Bootstrap, porque o Bootstrap depende dele. #}
-    {# ########################################################################################################## #}
 
 
 </head>
 <body>
 
-{% for membro in membros %}
-    <p><a href="{% url 'membro' membro.pk %}">{{ membro.first_name }}</a></p>
-{% endfor membros %}
+<div class="page-header">
+  <h1>PÁGINA DE MEMBROS</h1>
+</div>
 
-<a href="{% url 'criar_membro' %}">Cria membro</a>
+
+<div class="panel panel-default">
+  <div class="panel-heading">MEMBROS ADICIONADOS</div>
+
+  <div class="panel-body">
+
+  </div>
+
+  <table class="table">
+      <thead>
+        <tr>
+
+            <th>NOME</th>
+            <th>SOBRENOME</th>
+            <th>USUÁRIO</th>
+            <th>ÁREA DE ATUAÇÃO</th>
+            <th>e-mail</th>
+        </tr>
+
+      <tbody>
+  <tr>
+
+
+      <td>{% for membro in membros %}
+              <p><a href="{% url 'membro' membro.pk %}">{{ membro.first_name }}</a></p>
+          {% endfor membros %}
+      </td>
+
+      <td>
+          {% for membro in membros %}
+              <p>{{ membro.last_name }}</p>
+          {% endfor membros %}
+      </td>
+
+      <td>
+          {% for membro in membros %}
+              <p>{{ membro.username }}</p>
+          {% endfor membros %}
+      </td>
+
+      <td>
+          {% for membro in membros %}
+              <p>{{ membro.area_de_atuacao }}</p>
+          {% endfor membros %}
+      </td>
+
+
+
+      <td>
+          {% for membro in membros %}
+              <p>{{ membro.email }}</p>
+          {% endfor membros %}
+      </td>
+
+  </table>
+</div>
+
+
+
+
+
+</div>
+
+<div class="btn-group" style="margin-top: 300px">
+<button onclick = 'window.location.href ="{% url 'criar_membro' %}"' class="btn btn-lg btn-primary" style = "margin-left:600px" >CRIAR MEMBRO</button>
+<button onclick = 'window.location.href ="/"' class="btn btn-lg btn-primary">HOME</button>
+</div>
+
+
 </body>
 </html>
