--- a/templates/projetos.html
+++ b/templates/projetos.html
@@ -3,40 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Noticias</title>
-        {################################### COPIAR PARA TODO O HTML ################################################}
-    {#referência:#}
-    {#http://webdevacademy.com.br/tutoriais/bootstrap-3-como-comecar/#}
 
-    {# PRÉ CONFIGURAÇÕES #}
-    {# meta-tags #}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {# Esta tag força o IE a usar as definições de CSS mais recentes, e evita #}
-    {#que ele quebre o visual quando estiver no Modo de Compatibilidade. #}
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {#A metatag de viewport faz o site ocupar todo o espaço disponível na janela, #}
-    {#tanto em celulares, como em tablets ou em PC’s.#}
-
-    <meta charset="UTF-8">  {# Esta tag indica ao browser que a página vair usar caracteres Unicode, para exibir letras com acentos e cedilha, por exemplo.#}
-
-    {# BIBLIOTECA #}
-    {# referências ao bootstrap #}
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    {# E essas são as referências ao jQuery e aos plug-ins do Bootstrap. #}
-    {#O jQuery deve sempre vir antes do Js do Bootstrap, porque o Bootstrap depende dele. #}
-    {# ########################################################################################################## #}
+    <!-- adicionando bibliotecas de estilo-->
+    {% load staticfiles %}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
 
 </head>
 <body>
 
-{% for projeto in projetos%}
-    <p><a href="{% url 'projeto' projeto.pk %}">{{ projeto.titulo }}</a></p>
-{% endfor projetos %}
-<a href="{% url 'incluir_projeto' %}">Incluir Projeto</a>
+
+<div class="page-header">
+  <h1>PÁGINA DE PROJETOS</h1>
+</div>
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">PROJETOS ADICIONADOS</div>
+
+  <div class="panel-body">
+
+  </div>
+<table class="table">
+      <thead>
+        <tr>
+            <th>PROJETO</th>
+            <th>DESCRIÇÃO</th>
+            <th>RESPONSÁVEL</th>
+        </tr>
+
+      <tbody>
+  <tr>
+
+      <td>
+          {% for projeto in projetos%}
+            <p><a href="{% url 'projeto' projeto.pk %}">{{ projeto.titulo }}</a></p>
+          {% endfor projetos %}
+      </td>
+
+      <td>
+          {% for projeto in projetos%}
+            <p>{{ projeto.descricao }}</p>
+          {% endfor projetos %}
+      </td>
+
+      <td>
+          {% for projeto in projetos%}
+            <p>{{ projeto.responsavel }}</p>
+          {% endfor projetos %}
+      </td>
+
+
+  </table>
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="btn-group" style="margin-top: 300px">
+<button onclick = 'window.location.href ="{% url 'incluir_projeto' %}"' class="btn btn-lg btn-primary" style = "margin-left:600px" >ADICIONAR PROJETO</button>
+<button onclick = 'window.location.href ="/"' class="btn btn-lg btn-primary">HOME</button>
+</div>
+
+
+
+
 
 </body>
 </html>
